--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;900&display=swap');
+
 body{
     margin: 0;
     background-color:  #f2f2f2;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+
 }
 #root{
     max-width: 1200px;
@@ -11,5 +16,45 @@ body{
 section{
     min-height: 100vh;
     border-bottom: 1px solid #f2f2f2;
+}
+h1{
+    font-weight: 100;
+}
+
+nav{
+    position: fixed;
+}
+
+#welcome {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#welcome h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    width:400px;
+    height: 400px;
+
+    color: white;
+    font-weight: 900px;
+    font-size: 40px;
+    text-transform: uppercase;
+    text-align: center;
+
+    background-color:black;
+
+    border-radius: 200px;
+
+}
+#about{
+    position: relative;
+}
+#about button.more{
+    position: absolute;
+    bottom: 0;
+    right: 0;
 
 }
