--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+*{
+    box-sizing:border-box;
+    padding: 0;
+    margin: 0;
+}
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;900&display=swap');
 
 body{
-    margin: 0;
+    
     background-color:  #f2f2f2;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    font-weight: 400;
 
 }
 #root{
@@ -15,7 +20,8 @@ body{
 }
 section{
     min-height: 100vh;
-    border-bottom: 1px solid #f2f2f2;
+    padding: 20px;
+    border-bottom: 20px solid #00039b;
 }
 h1{
     font-weight: 100;
@@ -32,7 +38,7 @@ nav{
     height: 60px;
 
 
-    background-color: #999;
+    background-color: #0074d9;
 }
 
 nav ul{
@@ -53,6 +59,7 @@ nav ul li a{
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #FF4136;
 }
 #welcome h1{
     display: flex;
@@ -61,15 +68,17 @@ nav ul li a{
     
     width:400px;
     height: 400px;
-
+    padding: 20px;
+    
     color: white;
     font-weight: 900px;
     font-size: 40px;
     text-transform: uppercase;
     text-align: center;
-
+    
     background-color:black;
-
+    
+    border:20px solid #ffffff;
     border-radius: 200px;
 
 }
@@ -80,5 +89,17 @@ nav ul li a{
     position: absolute;
     bottom: 0;
     right: 0;
+    margin: 20px;
+
+    width: 200px;
+    height: 80px;
+    background-color:  #3D9970;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    border:none;
+    border-radius: 2px;
+   
+
 
 }
